# dopy

./: .gitignore  README.md  pyproject.toml
dopy/: cli.py  core.py  help.py  run.py
dopy_standalone/: core.py  help.py
examples/: fib.dopy  hello_world.dopy  helper.dopy  main.dopy  merge_sort.dopy  run.dopy  switch.dopy  try_except_finally.dopy
examples/pkg/: test.dopy
scripts/: publish.py  publish.test.py
test/: conftest.py  test_bad_syntax.py  test_core.py  test_edge_cases.py  test_edge_cases_success.py  test_success.py  test_type_hints.py
