[tool.poetry]
name = "dopy-cli"
version = "0.1.0"
description = "A python preprocessor that enables do..end syntax"
authors = ["Navdeep Saini <navdeep@mailbox.org>"]
readme = "README.md"
packages = [{ include = 'dopy' }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
dopy = "dopy.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = '^7.3.1'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
